OnboardingV2Minimal/force-app/main/default/objects/Required_Credential__c.object
<CustomObject>
    <description>A required credential or certification that must be provided by contacts for onboarding compliance. Links to an External_Contact_Credential_Type__c (e.g., OSHA 10, Driver&apos;s License) and validated via POE_External_Contact_Credential__c records. Example: A Required_Credential record named &quot;Valid OSHA 10 Certificate&quot; with Credential_Type__c pointing to &quot;OSHA 10 Certification&quot; credential type and Active__c=true. When this required credential is linked to a Vendor Program via Required_External_Contact_Credential__c, the onboarding process validates that contacts have matching POE_External_Contact_Credential records with the specified credential type and active status. This ensures compliance by verifying contacts have necessary certifications before completing onboarding for vendor programs that require them.</description>
    <label>Required Credential</label>
    <nameField>
        <displayFormat>VRC-{00000}</displayFormat>
        <label>Vendor Required Credential Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Required Credentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>