OnboardingV2Minimal/force-app/main/default/objects/Required_Credential__c/fields/External_Contact_Credential_Type__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Credential_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Contact Credential Type</label>
    <referenceTo>External_Contact_Credential_Type__c</referenceTo>
    <relationshipName>Vendor_Required_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>