OnboardingV2Minimal/force-app/main/default/objects/Required_Credential__c/fields/Vendor_Customization__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Customization__c</fullName>
    <label>Vendor Customization</label>
    <referenceTo>Vendor_Customization__c</referenceTo>
    <relationshipLabel>Required Credentials</relationshipLabel>
    <relationshipName>Vendor_Required_Credentials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>