OnboardingV2Minimal/force-app/main/default/objects/Required_Credential__c/validationRules/Must_Have_Linked_Credential_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Have_Linked_Credential_Type</fullName>
    <active>true</active>
    <description>This rule makes sure we have linked credential types</description>
    <errorConditionFormula>ISBLANK(External_Contact_Credential_Type__c)</errorConditionFormula>
    <errorDisplayField>External_Contact_Credential_Type__c</errorDisplayField>
    <errorMessage>Required Credential must be linked to an External Contact Credential Type.</errorMessage>
</ValidationRule>