OnboardingV2Minimal/force-app/main/default/objects/Required_Credential__c/validationRules/Prevent_Duplicates.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Duplicates</fullName>
    <active>false</active>
    <description>Deprecated for shared ECC Type model. Keep inactive so the same ECC Type can be reused across Vendor Programs via Required_Credential__c records.</description>
    <errorConditionFormula>AND(
  ISNEW(),
  NOT(ISBLANK(External_Contact_Credential_Type__c)),
  NOT(ISBLANK(  Vendor_Customization__r.Vendor__c  )),
  NOT(ISBLANK(Name))
)</errorConditionFormula>
    <errorMessage>Vendors and External Contact Credential Types combinations can only appear one time. Please check you do not already have a Vendor and External Contact Credential Type already created.</errorMessage>
</ValidationRule>