OnboardingV2Minimal/force-app/main/default/objects/Required_Credential__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Required__c</columns>
    <columns>External_Contact_Credential_Type__c</columns>
    <columns>Vendor_Customization__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>